// Copyright (C) 2024 Declan Teevan
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package stocklet.shipping.v1;

option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/shipping/v1;shipping_v1";

message ShipmentAllocatedEvent {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_FAILED = 1;
    TYPE_SHIPMENT_ALLOCATED = 2;
  }

  int32 revision = 1;
  Type type = 2;

  string shipment_id = 3;
  string order_id = 4;
  map<string, int32> product_quantities = 5;
}

message ShipmentDispatchedEvent {
  int32 revision = 1;

  string shipment_id = 2;
  string order_id = 3;
  map<string, int32> product_quantities = 4;
}
